# Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/engine/: application.hpp
Engine/src/: application.cpp  main.cpp
src/engine/: CMakeLists.txt
src/engine/include/engine/: application.hpp
src/engine/src/: application.cpp  main.cpp
src/hardware_info/: CMakeLists.txt
src/hardware_info/include/hardware_info/: cpu_info.hpp  gpu_info.hpp  profiler_panel.hpp  ram_info.hpp  wmi_wrapper.hpp
src/hardware_info/src/: profiler_panel.cpp  wmi_wrapper.cpp
src/logs/: CMakeLists.txt
src/logs/include/logs/: log_level.hpp  logger.hpp  logger_panel.hpp
src/logs/src/: logger.cpp  logger_panel.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: driver.hpp  open_gl.hpp  view_panel.hpp
src/renderer/include/renderer/buffers/: frame_buffer.hpp  index_buffer.hpp  vertex_array.hpp  vertex_array.inl  vertex_buffer.hpp  vertex_buffer.inl
src/renderer/include/renderer/geometry/: vertex.hpp
src/renderer/include/renderer/resources/: material.hpp  mesh.hpp  mesh_interface.hpp  model.hpp  shader.hpp  texture.hpp  uniform_info.hpp  uniform_type.hpp
src/renderer/include/renderer/resources/parsers/: assimp_parser.hpp  assimp_parser_flags.hpp
src/renderer/include/renderer/settings/: comparison_algorithm.hpp  cull_face.hpp  operation.hpp  pixel_data_format.hpp  pixel_data_type.hpp  primitive_mode.hpp  projection_mode.hpp  rasterization_mode.hpp  rendering_capability.hpp  texture_filtering_mode.hpp
src/renderer/shaders/: fragment.glsl  vertex.glsl
src/renderer/src/: driver.cpp  open_gl.cpp  view_panel.cpp
src/renderer/src/buffers/: frame_buffer.cpp  index_buffer.cpp  vertex_array.cpp
src/renderer/src/resources/: material.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/renderer/src/resources/parsers/: assimp_parser.cpp
src/tools/: CMakeLists.txt
src/tools/include/tools/eventing/: event.hpp
src/tools/include/tools/services/: service_interface.hpp  service_locator.hpp
src/tools/include/tools/time/: date.hpp  global_clock.hpp
src/tools/include/tools/utils/: random.hpp
src/tools/src/time/: global_clock.cpp
src/tools/src/utils/: path_parser.cpp  random.cpp
src/ui/: CMakeLists.txt
src/ui/include/ui/: drawable_interface.hpp  ui_manager.hpp
src/ui/include/ui/internal/: converter.hpp  memory_mode.hpp
src/ui/include/ui/modules/: canvas.hpp
src/ui/include/ui/panels/: base_panel.hpp  menu_bar_panel.hpp  transformable_panel.hpp  undecorated_panel.hpp  window_panel.hpp
src/ui/include/ui/settings/: alignment.hpp  group_widget_settings.hpp  panel_window_settings.hpp
src/ui/include/ui/styling/: style.hpp
src/ui/include/ui/types/: color.hpp
src/ui/include/ui/widgets/: base_widget.hpp  widget_container.hpp
src/ui/include/ui/widgets/buttons/: arrow_button.hpp  base_button.hpp  button.hpp  colored_button.hpp  small_button.hpp
src/ui/include/ui/widgets/drags/: multi_drag.hpp  multiple_drags.hpp  single_drag.hpp
src/ui/include/ui/widgets/inputs/: multiple_numbers_input.hpp  single_number_input.hpp  text_input.hpp
src/ui/include/ui/widgets/interfaces/: resizable.hpp
src/ui/include/ui/widgets/layouts/: group.hpp  tree_node.hpp
src/ui/include/ui/widgets/plots/: base_plot.hpp  plot_lines.hpp
src/ui/include/ui/widgets/selections/: check_box.hpp
src/ui/include/ui/widgets/texts/: base_text.hpp  colored_text.hpp  text.hpp  text_filter.hpp
src/ui/include/ui/widgets/visuals/: image.hpp
src/ui/src/: ui_manager.cpp
src/ui/src/modules/: canvas.cpp
src/ui/src/panels/: base_panel.cpp  menu_bar_panel.cpp  transformable_panel.cpp  undecorated_panel.cpp  window_panel.cpp
src/ui/src/types/: color.cpp
src/ui/src/widgets/: base_widget.cpp  widget_container.cpp
src/ui/src/widgets/buttons/: arrow_button.cpp  button.cpp  colored_button.cpp  small_button.cpp
src/ui/src/widgets/inputs/: text_input.cpp
src/ui/src/widgets/layouts/: group.cpp  tree_node.cpp
src/ui/src/widgets/plots/: base_plot.cpp  plot_lines.cpp
src/ui/src/widgets/selections/: check_box.cpp
src/ui/src/widgets/texts/: colored_text.cpp  text.cpp
src/ui/src/widgets/visuals/: image.cpp
src/windows/: CMakeLists.txt
src/windows/include/windows/: glfw.hpp  sdl2.hpp
src/windows/include/windows/cursor/: cursor_mode.hpp  cursor_shape.hpp
src/windows/include/windows/inputs/: input_manager.hpp  key.hpp  mouse_button.hpp
src/windows/include/windows/settings/: window_settings.hpp
src/windows/src/: glfw.cpp  sdl2.cpp
src/windows/src/inputs/: input_manager.cpp
